@startuml
class SelfDiscoveryState {
  +input: str
  +chat_history: List
  +intermediate_steps: List
  +discovered_capabilities: List
  +discovered_tools: List
  +agent_outcome: Any
}

class SelfDiscoveryAgent {
  -tools: List
  -llm: Any
  -discovered_capabilities: List
  -discovery_mode: bool
  
  +__init__(llm_configs, tools, memory, memory_config)
  +build_graph(): None
  -_discover_capabilities(state): Dict
  -_run_agent_llm(state): Dict
  -_execute_tools(state): Dict
  -_should_execute_tools(state): bool
  -_should_discover(state): bool
  -_interpret_discovery_results(response): List
  +run(input_text): Dict
}

class BaseAgent {
}

SelfDiscoveryAgent --|> BaseAgent
SelfDiscoveryAgent -- SelfDiscoveryState

note right of SelfDiscoveryAgent
  Implements the Self-Discovery pattern
  where the agent discovers its own
  capabilities through introspection
end note
@enduml